observability/argo/values/test-app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
      annotations:
        instrumentation.opentelemetry.io/inject-python: "opentelemetry-operator-system/test-app-instrumentation"
    spec:
      containers:
      - name: app
        image: ghcr.io/blueswen/opentelemetry-apm/fastapi:latest
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
