observability/argo/values/test-app/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: test-app
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/shared-gateway
  http:
    - match:
        - port: 8080
          uri:
            regex: ^/test-app(?:/(.*))?$
      rewrite:
        uri: /$1
      route:
        - destination:
            host: test-app.test-app.svc.cluster.local
            port:
              number: 80
